--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
-name = "fibonacci-lib"
+name = "receipts-lib"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 alloy-sol-types = { workspace = true }
+tiny-keccak = "2.0"
+rlp = "0.5"  # For RLP encoding of nodes
+serde = { version = "1.0.106", default-features = false, features = ["derive"] }
+serde_cbor = "0.11"
