--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 version = "0.1.0"
-name = "fibonacci-program"
+name = "receipts-program"
 edition = "2021"
 
 [dependencies]
 alloy-sol-types = { workspace = true }
 sp1-zkvm = "2.0.0"
-fibonacci-lib = { path = "../lib" }
+receipts-lib = { path = "../lib" }
+serde = { version = "1.0.106", default-features = false, features = ["derive"] }
+serde_cbor = "0.11.2"
